<resources>
    <string name="app_name">GpsSpeed</string>
    <string name="start_counting">Start Counting</string>
    <string name="stop_counting">Stop Counting</string>
    <string name="location">location</string>
    <string name="time">Time</string>
    <string name="speed">Speed</string>
    <string name="current_location">Current location : \n  %1$s </string>
    <string name="elapsed_time">Elapsed time : %1$s</string>
    <string name="current_speed">Current speed : %1$f m/s</string>

</resources>
