<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        tools:context=".MainActivity">

    <TextView
            android:id="@+id/tvElapsedTime"
            style="@style/GpsSpeedTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:id="@+id/tvCurrentLocation"
            style="@style/GpsSpeedTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvElapsedTime"/>

    <TextView
            android:id="@+id/tvCurrentSpeed"
            style="@style/GpsSpeedTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/speed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCurrentLocation"/>

    <TextView
            android:id="@+id/tvStartCounting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/GpsSpeedTextView"
            android:text="@string/start_counting"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCurrentSpeed"/>

    <TextView
            android:id="@+id/tvStopCounting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop_counting"
            android:visibility="gone"
            style="@style/GpsSpeedTextView"
            app:layout_constraintTop_toBottomOf="@+id/tvStartCounting"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

</android.support.constraint.ConstraintLayout>